feat(archive): implement interruption updating
This ended up being a pretty large commit due to generalizing
the interruption details & sleep session details screen to share a
common "SessionTimesComponent". This also involved creating base
domain models Session & SessionOverlapChecker.